<resources>
    <string name="app_name">Elevent</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="all_events_title">All Events</string>
    <string name="my_events_title">My Events</string>
    <string name="scanner_title">Scanner</string>
    <string name="profile_title">Profile</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
...
        <item>signed-up</item>
    </string-array>



    <string name="appbar_fragment_name" />
    <string name="notification_centre">notification centre</string>
    <string name="attendees">attendees</string>
    <string name="notification_centree">\nnotification centre</string>
    <string name="post_new_notification">post new notification</string>
    <string name="event_location">event description</string>
    <string name="most_recent_notification_attendee_eventview">who is ready for skruntskrunt</string>
    <string name="input_event_name">input event name</string>
    <string name="select_date">select date</string>
...
    <string name="event_name">event name</string>
    <string name="location">location</string>
    <string name="date">date</string>
    <string name="name">name</string>
    <string name="time">time</string>
    <string name="description">description</string>
    <string name="share">share</string>
    <string name="manage">manage</string>
    <string name="create">create</string>
    <string name="edit">edit</string>
    <string name="check_in_nqr_code">check-in \nQR code</string>
    <string name="promotional_nqr_code">promotional \nQR code</string>
    <string name="check_in_and_promotional_qr_codes_will_be_generated_upon_event_creation">  clicking create without reusing QR codes will generate new check-in and promotional QR codes </string>
    <string name="home_page">home page</string>
    <string name="contact">contact info</string>
    <string name="save">save</string>
...
