<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_blue"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <FrameLayout
                android:id="@+id/created_event_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <EditText
                android:id="@+id/event_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="@color/item_grey"
                android:text=""
                android:inputType="text"
                android:hint="@string/namee"
                android:theme="@style/FontTheme" />

            <EditText
                android:id="@+id/event_description_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/event_name_text"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="17dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="@color/item_grey"
                android:hint="@string/description"
                android:inputType="text"
                android:text=""
                android:theme="@style/FontTheme" />

            <EditText
                android:id="@+id/event_date_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/event_description_text"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/rounded_corner"
                android:text=""
                android:inputType="text"
                android:hint="@string/date"
                android:theme="@style/FontTheme" />

            <EditText
                android:id="@+id/event_time_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/event_date_text"
                android:layout_alignParentRight="true"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/rounded_corner"
                android:text=""
                android:inputType="text"
                android:hint="@string/time"
                android:theme="@style/FontTheme" />

            <EditText
                android:id="@+id/event_location_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/event_time_text"
                android:layout_alignParentRight="true"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/rounded_corner"
                android:text=""
                android:inputType="text"
                android:hint="@string/location"
                android:theme="@style/FontTheme" />

            <EditText
                android:id="@+id/event_max_attendees_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/event_location_text"
                android:layout_alignParentRight="true"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/rounded_corner"
                android:text=""
                android:hint="@string/no_max_limit_set"
                android:inputType="number"
                android:theme="@style/FontTheme"/>



            <Button
                android:id="@+id/eventPoster_image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_below="@id/event_attendance_info"
                android:text="@string/add_image"
                android:backgroundTint="@color/item_blue"
                android:fontFamily="monospace"
                android:textColor="@color/background_blue"
                android:textSize="25sp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="35dp" />


            <ImageView
                android:id="@+id/created_event_image_view_clickable"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_below="@+id/event_attendance_info"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="24dp" />

            <TextView
                android:id="@+id/edit_event_poster_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/created_event_image_view_clickable"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="1dp"
                android:clickable="true"
                android:focusable="true"
                android:text="Edit event poster"
                android:textColor="@color/text_white"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/delete_event_poster_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/created_event_image_view_clickable"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                android:layout_marginTop="1dp"
                android:clickable="true"
                android:text="Delete event poster"
                android:textColor="@color/text_white"
                android:textSize="18sp"
                android:focusable="true" />

            <TextView
                android:id="@+id/promotion_label"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/eventPoster_image"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/rounded_corner"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/promotional_nqr_code"
                android:textSize="15sp">

            </TextView>

            <TextView
                android:id="@+id/checkin_label"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/eventPoster_image"
                android:layout_alignParentRight="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/rounded_corner"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/check_in_nqr_code"
                android:textSize="15sp">

            </TextView>

            <ImageView
                android:id="@+id/promotionalQR_image"
                android:layout_width="170dp"
                android:layout_height="155dp"
                android:layout_below="@id/promotion_label"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"/>

            <ImageView
                android:id="@+id/checkinQR_image"
                android:layout_width="170dp"
                android:layout_height="155dp"
                android:layout_below="@id/checkin_label"
                android:layout_alignParentRight="true"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginStart="5dp"/>

            <Button
                android:id="@+id/manage_the_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/promotionalQR_image"
                android:layout_marginStart="39dp"
                android:layout_marginTop="17dp"
                android:layout_toEndOf="@id/share_the_event"
                android:backgroundTint="@color/item_blue"
                android:fontFamily="monospace"
                android:text="@string/manage"
                android:textColor="@color/background_blue"
                android:textSize="15sp" />

            <Button
                android:id="@+id/share_the_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/promotionalQR_image"
                android:layout_marginTop="17dp"
                android:backgroundTint="@color/item_blue"
                android:fontFamily="monospace"
                android:text="@string/share"
                android:textColor="@color/background_blue"
                android:textSize="15sp" />

            <Button
                android:id="@+id/save_the_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/promotionalQR_image"
                android:layout_marginStart="38dp"
                android:layout_marginTop="17dp"
                android:layout_toEndOf="@+id/manage_the_event"
                android:backgroundTint="@color/item_blue"
                android:fontFamily="monospace"
                android:text="save"
                android:textColor="@color/background_blue"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/event_attendance_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/event_max_attendees_text"
                android:text="@string/spots_remaining"
                android:layout_alignParentRight="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/rounded_corner"
                android:theme="@style/FontTheme"
                />


        </RelativeLayout>
    </ScrollView>
</RelativeLayout>