<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MyEventsFragment"
    android:id="@+id/my_events_frame_layout"
    android:background="@color/item_grey">

    <FrameLayout
        android:id="@+id/myevents_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ListView
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/my_events_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:cacheColorHint="@color/background_blue"
        android:divider="@color/item_grey"
        android:dividerHeight="5dp"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/create_my_event_button"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/background_blue"
        app:tint="@color/item_grey"
        android:layout_gravity="bottom"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@android:drawable/ic_input_add" />
</RelativeLayout>