...
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <Button
                android:id="@+id/notif_centre_button"
                android:layout_width="361dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:backgroundTint="@color/item_blue"
...
                android:text="@string/map"
                android:textColor="@color/background_blue"
                android:textSize="20dp"
                android:theme="@style/FontTheme" />

            <TextView
                android:id="@+id/attendee_list_textview"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/map_button"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
...
